--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name" : "nawazm92/paubox-php",
+	"name" : "nawazm92/paubox",
 	"description" : "A PHP package for the Paubox Transactional Email API (Fork of original paubox-php SDK)",
 	"homepage" : "https://github.com/nawazm92/paubox",
 	"license" : "Apache-2.0",
